# gRPC_Demo

./: README.md
cpp_demo/: CMakeLists.txt  client.cpp  server.cpp  stitch_server_impl.cpp  stitch_server_impl.h
proto/: stitch.proto
python_demo/: gen.sh  stitch_client.py  stitch_server.py
